Clarified v2.3.5 Fix long-standing nuisances
Making more use of the new :has() selector! I've finally, after years, squashed some old conflicts with the different date and season headers on the animelist as well as the genre and demographic selectors on the mangalist.

--- a/Clarified Theme/Clarified.css
+++ b/Clarified Theme/Clarified.css
@@ -1,6 +1,6 @@
 /**
  * "Clarified" by Valerio Lyndon
- * v2.3.4
+ * v2.3.5
  * 
 ***TABLE*OF*CONTENTS***
  * 
@@ -894,6 +894,7 @@ tr.list-table-data {
 }
 
 /* column icon styles */
+.header-title::before,
 .header-title a::before {
 	font-size: 11px;
 	vertical-align: top;
@@ -1501,36 +1502,44 @@ tr.list-table-data {
   @Airing
   ---------*/
 
-/* Header
+/* Header */
 
-Includes various jank code that only exists to properly position the season column.
-
-Please MAL I am begging you, just add another selector to the date column headers so I don't have to do these awful hacks anymore. I just want a .header-title.started.user-started and .header-title.started.airing-started selector please. */
+/* days */
 
 .header-title.days {
 	width: 70px !important;
 	order: 25;
 }
 
-.header-title:is(.started, .finished) {
+/* other dates */
+
+.header-title:is(.started, .finished):has(a) {
 	width: auto !important;
-	background: var(--content-background) !important;
 	order: 25;
 	text-align: left !important;
 	font-size: 0;
 }
-.header-title.started {
-	margin-right: 46px !important;
-}
 .header-title.finished {
-	margin-left: -46px !important;
+	margin-left: -3px !important;
 }
-.header-title.started + .started {
-	margin-left: -46px !important;
+
+.header-title.started a::before {
+	content: "\f251";
 }
-.header-title.started + .started + .finished {
-	margin-right: 49px !important;
+.header-title.finished a::before {
+	content: "\f253";
 }
+
+/* user dates */
+
+.header-title.started:not(.finished ~ .started) {
+	--label: "User Started";
+}
+.header-title.finished:not(.finished ~ .finished) {
+	--label: "User Finished";
+}
+
+/* airing / publishing */
 
 .header-title:is(.started, .finished) a {
 	width: 33px;
@@ -1541,79 +1550,17 @@ Please MAL I am begging you, just add another selector to the date column header
 	width: 37px;
 }
 
-.header-title.started a::before {
-	content: "\f251";
+.anime .header-title.started:has(a) {
+	--label: "Airing Started";
 }
-.header-title.finished a::before {
-	content: "\f253";
+.manga .header-title.started:has(a) {
+	--label: "Publishing Started";
 }
-
-@layer {
-	.header-title:is(.started, .finished) a:is([href*="order=3"], [href*="order=-3"]) {
-		--label: "User Started";
-	}
-	/* These selectors must be this verbose as to prevent issues between the anime and manga lists */
-	.anime .header-title:is(.started, .finished) a:is([href*="order=14"], [href*="order=-14"]) {
-		--label: "Airing Started";
-	}
-	.manga .header-title:is(.started, .finished) a:is([href*="order=12"], [href*="order=-12"]) {
-		--label: "Publishing Started";
-	}
-	.header-title:is(.started, .finished) a:is([href*="order=2"], [href*="order=-2"]) {
-		--label: "User Finished";
-	}
-	.anime .header-title:is(.started, .finished) a:is([href*="order=15"], [href*="order=-15"]) {
-		--label: "Airing Finished";
-	}
-	.manga .header-title:is(.started, .finished) a:is([href*="order=13"], [href*="order=-13"]) {
-		--label: "Publishing Finished";
-	}
+.anime .header-title.finished:has(a) {
+	--label: "Airing Finished";
 }
-
-/* Add less specific header when using advanced sorting to prevent labelling errors.
-This is due to the "order" href syntax being absolutely fuckass-backwards sometimes */
-@layer {
-	body[data-query*='"order"'] .header-title.started a {
-		--label: "Started";
-	}
-	body[data-query*='"order"'] .header-title.finished a {
-		--label: "Finished";
-	}
-	.anime[data-query*='"order"'] .header-title.started ~ .started a {
-		--label: "Airing Started";
-	}
-	.anime[data-query*='"order"'] .header-title.finished ~ .finished a {
-		--label: "Airing Finished";
-	}
-	.manga[data-query*='"order"'] .header-title.started ~ .started a {
-		--label: "Publishing Started";
-	}
-	.manga[data-query*='"order"'] .header-title.finished ~ .finished a {
-		--label: "Publishing Finished";
-	}
-}
-
-/* if user dates, season, and airing dates all enabled */
-.list-table-header:has(.started ~ .started ~ .started) .started ~ .started ~ .started,
-.list-table-header:has(.started ~ .started ~ .started) .finished ~ .finished {
-	left: -40px;
-}
-
-.header-title.started::before {
-	position: absolute;
-	left: 0;
-	z-index: -1;
-	width: 46px;
-	text-align: center;
-	font-size: 11px;
-	line-height: 15px;
-}
-.list-table-header:not(:has(.finished ~ .started ~ .started)) .started::before {
-	content: "Season";
-}
-.list-table-header:has(.started ~ .started ~ .started) .started ~ .started ~ .started::before {
-	content: "Season";
-	left: calc(100% + 40px);
+.manga .header-title.finished:has(a) {
+	--label: "Publishing Finished";
 }
 
 /* Column */
@@ -1726,6 +1673,15 @@ This is due to the "order" href syntax being absolutely fuckass-backwards someti
 
 /* Season */
 
+.header-title.started:not(:has(a)) {
+	width: 43px !important;
+	order: 26;
+	font-size: 0;
+}
+.header-title.started:not(:has(a))::before {
+	content: "Season";
+}
+
 .data.season {
 	width: 43px;
 	order: 26;
@@ -1739,9 +1695,9 @@ This is due to the "order" href syntax being absolutely fuckass-backwards someti
 .data.season a {
 	width: 4ch;
 	margin-left: 3px;
-	text-align: left;
 	font-size: 12px;
 	font-weight: bold;
+	text-align: left;
 }
 .data.season a::first-line {
 	font-size: 9px;
@@ -1844,7 +1800,7 @@ This is due to the "order" href syntax being absolutely fuckass-backwards someti
 	grid-row-start: tags;
 	text-align: left !important;
 }
-.data.tags {
+.list-table:has(.genre [href*="genre="]) .data.tags {
 	width: 60%;
 	margin-left: auto;
 	text-align: right !important;
@@ -1853,22 +1809,19 @@ This is due to the "order" href syntax being absolutely fuckass-backwards someti
 	width: 40%;
 }
 /* I'm begging you to add a .demographic class to the mangalist, same as the animelist has */
-.data.genre + .genre {
+.data.genre:not(:has([href*="genre="])) {
 	width: 80px;
 	grid-column-start: initial;
 	grid-row-start: initial;
 	grid-column-end: initial;
 	order: 35;
 	text-align: center !important;
+	margin-top: 0;
 }
 
 .data.tags div,
 .data.genre {
 	font-size: 0;
-}
-
-.data.genre + .genre {
-	margin-top: 0;
 }
 
 .data.tags span a,
